<resources>
    <string name="app_name">SchoolComms</string>
    <string name="homeScreenButton1">Intercom</string>
    <string name="HomeScreenButton2">Daily Notes</string>
    <string name="HomeScreenButton3">IT Support</string>
    <string name="HomeScreenButton4">Book Room</string>
    <string name="intercomTextView1">Intercom Announcements</string>
    <string name="intercomEditText1">Name</string>
    <string name="intercomTextView2">Create an Announcement</string>
    <string name="intercomEditText2">Announcement</string>
    <string name="radioButton2">9-11</string>
    <string name="radioButton3">11-1</string>
    <string name="radioButton4">2-4</string>
    <string name="teacher_name">Teacher Name: </string>
    <string name="intercom_message_1">Please find my Intercom Announcement attached.</string>
    <string name="daily_notes_message_1">Please find my Daily Notes message attached.</string>
    <string name="intercom_message_instructions">Please announce this message at </string>
    <string name="intercom_message_end">Kind Regards, </string>
    <string name="teacher_name_blank">You did not enter your name.</string>
    <string name="time_selection_blank">You did not select a time.</string>
    <string name="announcement_blank">You did not enter an address.</string>
    <string name="notification_title">Notification!</string>
    <string name="to_email">mrprincipal@cbs.ie</string>
    <string name="email_subject_intercom">Intercom Announcement Request </string>
    <string name="email_subject_notes">Daily Notes Request </string>
    <string name="textViewDailyNotes1">Daily Notes</string>
    <string name="textViewDailyNotes2">Create a Note</string>
    <string name="dailyNotesEmailButton">Send Note</string>
    <string name="intercomSendButton">Send Announcement</string>
    <string name="dailyNotesEditNote">Note</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="default_web_client_id">481396556193-m5e0c964dlb1v53mk96m34kr7nkfm8tt.apps.googleusercontent.com</string>
    <string name="title_activity_book_room">bookRoom</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="bookingRequestBtn">Request Booking</string>
    <string name="viewBookings">View Bookings</string>
    <string name="timeSelection">Please select a time for the announcement:</string>
    <string name="add_item_textview1">Enter Name</string>
    <string name="add_item_edittext_2">Enter Booking Date</string>
    <string name="add_item_time">Enter Time</string>
    <string name="add_item_room">Enter Room Number</string>
    <string name="main_textview1">SchoolComms</string>
    <string name="main_textview2">Select an Option</string>
    <string name="enter_time">Enter Time Slot</string>
    <string name="enter_booking_date">Enter Booking Date</string>
    <string name="enter_room_number">Enter Room Number</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="add_item_title">Request to Book a Room</string>
    <string name="add_item_explanation">Room bookings cannot be guaranteed. You will receive an email confirmation once your request has been processed.</string>
    <string name="add_item_button">Send Request</string>
    <string name="google_sheet_textview">Click the button to view requested bookings.</string>
    <string name="onCancelError">The following error occurred:</string>
    <string name="requestCancelled">Request cancelled.</string>
    <string name="noresults">No results returned.</string>
    <string name="GoogleServicesrequired">This app requires Google Play Services. Please install</string>
    <string name="install">Google Play Services on your device and relaunch this app.</string>
    <string name="noConnection">No network connection available.</string>
    <string name="school_logo">school logo</string>
    <string name="intercom_logo">intercom logo</string>
    <string name="daily_notes_logo">daily notes logo</string>
    <string name="it_support_icon">it support icon</string>
    <string name="book_room_icon">book room icon</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_note">Enter Note</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_announcement">Enter Your Announcement</string>
    <string name="_9_11">9-11</string>
    <string name="_11_1">11-1</string>
    <string name="_2_4">2-4</string>
    <string name="mondaytt">mondaytt</string>
    <string name="friday_tt">friday tt</string>
    <string name="thursday_tt">thursday tt</string>
    <string name="wednesday_tt">wednesday tt</string>
    <string name="tuesday_tt">tuesday tt</string>

</resources>
