<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView

        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_item2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/timetablegallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" />


            <ImageView
                android:id="@+id/scrollImage1"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/mondaytt"
                android:src="@drawable/monday1" />

            <ImageView
                android:id="@+id/scrollImage2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tuesday_tt"
                android:src="@drawable/tuesday1" />

            <ImageView
                android:id="@+id/scrollImage3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/wednesday_tt"
                android:src="@drawable/wednesday1" />

            <ImageView
                android:id="@+id/scrollImage4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/thursday_tt"
                android:src="@drawable/thursday1" />

            <ImageView
                android:id="@+id/scrollImage5"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/friday_tt"
                android:src="@drawable/friday1" />


        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/gs2"
        style="@style/FirebaseUI.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:text="@string/viewBookings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add_item2"
        style="@style/FirebaseUI.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bookingRequestBtn"
        app:layout_constraintBottom_toTopOf="@+id/gs2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>